<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eipgam</string>
    <string name="action_settings">Settings</string>
    <string name="login_userName">E-mail</string>
    <string name="login_psw">Senha</string>
    <string name="login_login">Login</string>
    <string name="login_connectedForever">Continuar conectado</string>
    <string name="login_cadastre">Cadastro manual</string>
    <string name="login_cadastreFacebook">Vincule via Facebook</string>
    <string name="login_cadastreGoogle">Cadastre pelo Google</string>
    <string name="app_subName">Finance</string>
    <string name="cadastre_name">"Nome "</string>
    <string name="Cadastre_salary">Salário</string>
    <string name="cadastre_payDay">Dia de pagamento</string>
    <string name="cadastre_email">E-mail</string>
    <string name="cadastre_pswRepite">Repita sua senha</string>
    <string name="cadastre_location">Endereço</string>
    <string name="app_ok">Aceitar</string>
    <string name="app_cancel">Cancelar</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_accountName">Nome do usuário da conta:</string>
    <string name="title_activity_manual_cadastre">Cadastro Manual</string>
    <string name="title_activity_summary">Resumo</string>
    <string name="title_activity_master">Master</string>
    <string name="title_activity_cadastre">Cadastro</string>
    <string name="title_activity_sumary">Resumo</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_spending">Gastos</string>
    <string name="title_activity_goal">Metas</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_saving_tips">Dica de economia</string>
    <string name="title_activity_edit_goal">Adicione/Modifique meta</string>
    <string name="goal_name">nome da meta</string>
    <string name="goal_value">"valor total "</string>
    <string name="goal_type">tipo de meta</string>
    <string name="goal_estimative_date">Data estimada</string>
    <string name="goal_number_of_plots">Numero de parcelas</string>
    <string name="goal_generate_alert">Gera alerta</string>
    <string name="goal_speling">Gera gasto</string>
    <string name="goal_tags">TAGS para ajudar na economia ex: fusca,belina,variante</string>
    <string name="title_activity_edit_spending">Editar gasto</string>
    <string name="spending_name">nome do gasto</string>
    <string name="spending_value">valor do gasto</string>
    <string name="spending_type">tipo de gasto</string>
    <string name="spending_paytype">tipo de pagamento</string>
    <string name="spending_new">Novo gasto</string>
    <string name="spending_date">data do gasto</string>
    <string name="spending_edit_date_info">Data de pagamento:</string>
    <string name="goal_new">Nova meta</string>

</resources>