<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditSpendingActivity" >

 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickOk"
                android:text="@string/app_ok"
                android:width="100dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickCancel"
                android:text="@string/app_cancel"
                android:width="100dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/spending_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/spending_name" />

        <EditText
            android:id="@+id/spending_edit_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/spending_value"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spending_list_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/spending_type" />
         
         <Spinner
             android:id="@+id/spending_list_paytype"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/spending_paytype" />

        <EditText
            android:id="@+id/spending_edit_plots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goal_number_of_plots"
            android:inputType="number" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spending_edit_date_info"
            android:textAppearance="?android:attr/textAppearanceSmall" />

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="horizontal" >

		    <TextView
		        android:id="@+id/spending_edit_date_legend"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:text="Small Text"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <DatePicker
		        android:id="@+id/spending_date"
		        android:layout_width="wrap_content"
		        android:layout_height="100dp"
		        android:layout_gravity="center_vertical"
		        android:calendarViewShown="false"
		        android:contentDescription="@string/spending_date" />

		    <TextView
		        android:id="@+id/spending_edit_date_legendEnd"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		</LinearLayout>

    </LinearLayout>

</RelativeLayout>