<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

<LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:orientation="vertical">

      <LinearLayout
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="vertical"
	      android:textAlignment="center" >

		<TextView
		  android:id="@+id/textView1"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_gravity="center_horizontal"
		  android:paddingTop="10dp"
		  android:text="@string/app_name"
		  android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="50dp"
            android:text="@string/app_subName"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/main_login_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp" >
 
		   <LinearLayout
          		android:layout_width="match_parent"
          		android:layout_height="wrap_content"
          		android:orientation="vertical" >

            	<TextView
            	     android:id="@+id/main_edit_userName"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:text="@string/main_accountName"
            	    android:textAppearance="?android:attr/textAppearanceMedium" />

          </LinearLayout>
          <EditText
              android:id="@+id/main_edit_psw"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/login_psw"
              android:inputType="textPassword" />

          <Button
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:onClick="onClickLogin"
              android:text="@string/login_login" >
          </Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_cadastre_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickCadastreGoogle"
                android:text="@string/login_cadastreGoogle" >
            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickCadastreFacebook"
                android:text="@string/login_cadastreFacebook" >
            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickCadastre"
                android:text="@string/login_cadastre" >
            </Button>
       
    </LinearLayout>

  </LinearLayout>

</RelativeLayout>
